[package]
name = "siege-editor"
version = "0.1.2"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license-file = "LICENSE"

readme = "README.md"
description = "Pixel art siege engine editor/animator/creator"

repository = "https://github.com/tversteeg/siege.git"
keywords = ["gamedev", "sprite"]
categories = ["rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/siege"}

[workspace]

[dependencies]
siege = { path = "lib", version = "0" }
minifb = "0.11"
direct-gui = "0.1"
line_drawing = "0.7"
