[package]
name = "siege"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/siege"
documentation = "https://docs.rs/siege"
description = ""
keywords = []
categories = []

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/siege" }
is-it-maintained-open-issues = { repository = "tversteeg/siege" }

[dependencies]
anyhow = "1.0.28"
hibitset = "0.6.3"
legion = "0.2.1"
lyon = { version = "0.15.6", features = ["extra"] }
miniquad = "0.2.55"
usvg = "0.9.0"
vek = "0.10.2"
