[package]
name = "siege"
version = "0.2.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/siege"
documentation = "https://docs.rs/siege"
description = "Procedural siege engines generator"
keywords = ["gamedev", "wfc", "procedural-generation"]
categories = ["rendering", "game-engines"]

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/siege" }
is-it-maintained-open-issues = { repository = "tversteeg/siege" }

[dependencies]
anyhow = "1.0.28"
coord_2d = "0.2.20"
grid_2d = "0.14.4"
itertools = "0.9.0"
num-derive = "0.3.0"
num-traits = "0.2.11"
rand = "0.7.3"
wfc = "0.9.1"

[dev-dependencies]
anyhow = "1.0.28"
lyon = "0.15.6"
miniquad = "0.2.55"
vek = "0.10.2"
