[package]
name = "siege"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license-file = "../LICENSE"

readme = "../README.md"
description = "Render pixel art siege engines"

repository = "https://github.com/tversteeg/siege.git"
keywords = ["gamedev", "sprite"]
categories = ["rendering", "game-engines"]

[badges]
travis-ci = {repository = "tversteeg/siege"}

[dependencies]
line_drawing = "0.7"
